namespace JusticeApp;

public class Defendant
{
}