namespace HarmelLaw.JusticeApp;

public class OffenceAdvice
{
}