@startuml Public Prosecution Service

hide empty members
hide empty methods

package investigation {
    class PreChargeDecisionService {
        PreChargeDecisionCase ReceiveRequestForPreChargeDecisionCase(PoliceInvestigationDetails)
    }

    class CriminalOffence {
    }

    class OffenceAdvice {
    }

    class PoliceInvestigationDetails {
    }

    class PreChargeDecisionCase {
        void RecordAlternativeOffenceAdvice(Suspect, OffenceAdvice)
        OffenceAdvice GetOffenceAdviceFor(Suspect)
    }

    class Suspect    {
    }
}

package preparation {
    class TrialPreparationService {
        CriminalCase AcceptCaseFile(PoliceCaseFile)
    }

    class CriminalCase {
    }

    class Defendant {
    }

    class PoliceCaseFile {
    }
}

class PNCId {
}

Suspect *-- "1" CriminalOffence

PoliceCaseFile *-- "1" PNCId

PoliceCaseFile *-- "*" Defendant

PoliceInvestigationDetails *-- "1" PNCId

PoliceInvestigationDetails *-- "*" Suspect

PreChargeDecisionCase *-- "*" Suspect

PreChargeDecisionCase *-- "*" OffenceAdvice

CriminalCase *-- "1" PNCId

CriminalCase *-- "*" Defendant

PreChargeDecisionService --> PreChargeDecisionCase : <<creates>>

PreChargeDecisionService --> PoliceInvestigationDetails : <<uses>>

TrialPreparationService --> CriminalCase : <<creates>>

TrialPreparationService --> PoliceCaseFile : <<uses>>

@enduml
